style/index.css
body {
	font-family: Helvetica;
	font-size: 16px;
	color:black;
}
#main {
	background: url('../images/newspaperbackground.png') no-repeat center top;
	width: 576px;
	/*height: ANY*/
	margin-left:auto;
	margin-right:auto;
	overflow:visible;
}

/**********
content / welcome text
**********/
#content {
	position:relative;
	left:90px;
	width:390px;
	height:550px;
	overflow:auto;
	margin:0;
	padding:0px 10px 0px 15px;
	text-align:left;
}
#content h1 {
	font-size:36pt;
	font-variant:small-caps;
	margin:0;
}
#content h2 {
	font-size:46pt;
	margin:0;
	
	font-weight:bold;
	text-transform:uppercase;
}
#content dl > dt, #content dl > dd {
	margin-left:0;
	display:inline-block;
	white-space:normal;
}
#content dl > dt {
	font-weight:bold;
}
#content a {
	text-decoration:none;
}
#content a:hover {
	text-decoration: underline;
	font-weight:bold;
}

/**********
content / photos
**********/
#photos {
	display:none;
	margin-top: 60px;
}
/**********
red highlight lines
**********/
/* using floats was too much trouble. PUshed content around, margin hacks to compensate mis-aligned lines, etc.
.highlightlinesContainer {
	xposition:relative;
	xtop:-700px;
	background:transparent;
	border:1px solid lime;
	margin-left:auto;
	margin-right:auto;
	width:694px;
	height:1200px;
}
.highlighline {
	display:inline-block;
	margin:0;
	padding:0;
}
#highlight_lines_box_tl {
	float: left;
}
#highlight_lines_box_t {
	float: left;
	margin-bottom:-100px;
}
#highlight_lines_box_tr {
	float:right;
}
#highlight_lines_box_l {
	clear:left;
	float:left;
	margin-right:-100px;
}
#highlight_lines_box_bl {
	clear:left;
	float:left;
}
#highlight_lines_box_r {
	clear:right;
	float:right;
	margin-left:-100px;
}
#highlight_lines_box_b {
	float:right;
	margin-top:-100px;
}
#highlight_lines_box_br {
	float:right;
}
*/
#highlightlinesContainerTop, #highlightlinesContainerMiddle, #highlightlinesContainerBottom {
	white-space:nowrap;
	overflow:visible;
	text-align:left;
	width:1900px;
	height:100%;
}
.highlighline {
	display:block;
	position:relative;
}
#highlight_lines_box_tl {
	top:-950px;
}
#highlight_lines_box_t {
	top:-1100px;
	left:150px;
}
#highlight_lines_box_tr {
	top:-1168px;
	left:442px;
}
#highlight_lines_box_l {
	top:-1168px;
}
#highlight_lines_box_r {
	top:-1516px;
	left:521px;
}

#highlight_lines_box_bl {
	top:-1518px;
}
#highlight_lines_box_b {
	top:-1590px;
	left:150px;
}
#highlight_lines_box_br {
	top:-1740px;
	left:442px;
}

/**********
Contact Tabs
**********/
.contactTab {
	height:60px;
	width:300px;
	border-bottom: 1px dashed #999999;
}
.contactTab:first-child {
	border-top: 1px dashed #999999;
}

.contactTab > a > * {
	margin-left:40px;
	white-space: nowrap;
}

.contactTab img {
	margin-left:10px;
	width: 16px;
	height: 16px;
	position:relative;
	top:28px;
}

.contactTab .service {
	font-weight:bold;
	text-transform:uppercase;
	text-decoration:none;
	color:black;
}

.contactTab a {
	color: #000099;
	text-decoration:none;
}

.contactTab a:hover {
	text-decoration:underline;
}

.contactTab:hover {
	-webkit-transform: scale(1.2);
	-moz-transform: scale(1.2);
	transform: scale(1.2);
}

:link    { color: #000099; }   /*just to make things consistent*/
:visited { color: #000099; }

#contactTabs {
	xborder:1px solid green;
	
	/*rotate text*/

	transform: translate(510px, 0) rotate(90deg);
	transform-origin: left top;
	
	-webkit-transform: translate(510px, 0) rotate(90deg);
	-webkit-transform-origin: left top;

	-moz-transform: translate(510px, 0) rotate(90deg);
	-moz-transform-origin: left top;
	
}

